--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "axios": "^1.10.0",
+    "discord.js": "^14.21.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
@@ -26,6 +28,8 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
-    "vite": "^7.0.4"
+    "node-loader": "^2.1.0",
+    "vite": "^7.0.4",
+    "zlib-sync": "^0.1.10"
   }
 }
